--- a/index.html
+++ b/index.html
@@ -7,5 +7,104 @@
     <title>Google task</title>
     <link rel="stylesheet" href="./asset/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section>
+      <header>
+        <ul>
+          <li><a href="#">Gmail</a></li>
+          <li><a href="#">Images</a></li>
+          <li>
+            <a href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="gb_Xe"
+                focusable="false"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
+                />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </header>
+      <main>
+        <div class="wrapper">
+          <img src="./asset/images/googlelogo_color_272x92dp.png" alt="" />
+          <div class="searchBox">
+            <input type="text" class="search" />
+            <div class="icons">
+              <div>
+                <svg
+                  focusable="false"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+                  />
+                </svg>
+              </div>
+              <div>
+                <svg
+                  class="HPVvwb"
+                  focusable="false"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"
+                    fill="#4285f4"
+                  />
+                  <path d="m11 18.08h2v3.92h-2z" fill="#34a853" />
+                  <path
+                    d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"
+                    fill="#f4b400"
+                  />
+                  <path
+                    d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z"
+                    fill="#ea4335"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
+          <div class="buttons">
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+          </div>
+
+          <ul class="languages">
+            <li>Google offered in:</li>
+            <li><a href="">Hausa</a></li>
+            <li><a href="">Igbo</a></li>
+            <li><a href="">Ede Yoruba</a></li>
+            <li><a href="">Nigerian Pidgin</a></li>
+          </ul>
+        </div>
+      </main>
+      <footer>
+        <div class="row row1">
+          <p>Nigeria</p>
+        </div>
+        <div class="row row2">
+          <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Advertising</a></li>
+            <li><a href="">Business</a></li>
+            <li><a href="">How Search works</a></li>
+          </ul>
+          <p>
+            <img src="./asset/images/greenleaf.png" />Carbon neutral since 2007
+          </p>
+          <ul>
+            <li><a href="">Privacy</a></li>
+            <li><a href="">Terms</a></li>
+            <li><a href="">Settings</a></li>
+          </ul>
+        </div>
+      </footer>
+    </section>
+  </body>
 </html>
